--- a/backend_course/src/main/resources/application.properties
+++ b/backend_course/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
-spring.data.mongodb.database=db
+spring.data.mongodb.database=course_eLearning
 spring.data.mongodb.username=root
 spring.data.mongodb.password=password
 spring.data.mongodb.authentication-database=admin
