update OAuth2 backend handler

--- a/backend_user_details/template-sample/src/main/resources/application.yml
+++ b/backend_user_details/template-sample/src/main/resources/application.yml
@@ -6,8 +6,7 @@ spring:
           google :
             clientId: 366146655842-c6ttmo8nskjhgcrg3papupc1s8t4rtkg.apps.googleusercontent.com
             clientSecret: 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
-#            redirect-uri: : "{baseUrl}/oauth2/callback/{registrationId}"
-
+            redirect-uri: <{baseUrl}/oauth2/callback/{registrationId}>
             scope:
               - email
               - profile
