add update user by id, refactor code, update login-signup

--- a/backend_user_details/template-sample/src/main/resources/application.properties
+++ b/backend_user_details/template-sample/src/main/resources/application.properties
@@ -2,10 +2,9 @@ spring.data.mongodb.uri=mongodb+srv://root:root@khang-mongo.wjhkyca.mongodb.net/
 spring.data.mongodb.database=miki
 
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
-
 spring.main.allow-circular-references = true
 server.port = 8080
 
 # App Properties
-bezkoder.app.jwtSecret= bezKoderSecretKey
-bezkoder.app.jwtExpirationMs= 86400000
+rademy.app.jwtSecret= secretKey
+rademy.app.jwtExpirationMs= 86400000
