ADD get lesson by id

--- a/backend_course/pom.xml
+++ b/backend_course/pom.xml
@@ -59,6 +59,11 @@
 			<groupId>org.springframework.kafka</groupId>
 			<artifactId>spring-kafka</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-java-sdk</artifactId>
+			<version>1.12.373</version>
+		</dependency>
 <!--		unit test only, should be deleted -->
 		<dependency>
 			<groupId>org.junit.vintage</groupId>
