--- a/backend_course/src/main/resources/application.properties
+++ b/backend_course/src/main/resources/application.properties
@@ -6,3 +6,9 @@ spring.data.mongodb.password=password
 spring.data.mongodb.authentication-database=admin
 
 springdoc.api-docs.path=/api-docs
+
+# AWS
+aws.access.key.id=AKIAUHS3YT2TZ4ISMYMO
+aws.secret.access.key=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
+aws.s3.region=ap-south-1
+aws.s3.bucket.name=elearning-sead-storage
