--- a/backend_course/pom.xml
+++ b/backend_course/pom.xml
@@ -57,6 +57,14 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+			<version>3.1.2</version>
+		</dependency>
+
+
 <!--		unit test only, should be deleted -->
 	</dependencies>
 
