--- a/backend_user_details/template-sample/src/main/resources/application.properties
+++ b/backend_user_details/template-sample/src/main/resources/application.properties
@@ -1,6 +1,11 @@
 spring.data.mongodb.uri=mongodb+srv://root:root@khang-mongo.wjhkyca.mongodb.net/?retryWrites=true&w=majority
 spring.data.mongodb.database=miki
 
+eureka.client.serviceUrl.defaultZone=http://eureka:password@localhost:8761/eureka
+spring.application.name=profile_service
+eureka.client.fetch-registry=true
+eureka.client.register-with-eureka=true
+
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 spring.main.allow-circular-references = true
 server.port = 8081
