--- a/backend_course/src/main/resources/application.properties
+++ b/backend_course/src/main/resources/application.properties
@@ -1,8 +1,6 @@
-server.port = 1111
-eureka.client.serviceUrl.defaultZone=http://eureka:password@localhost:8761/eureka
-spring.application.name=course_eLearning
-eureka.client.fetch-registry=true
-eureka.client.register-with-eureka=true
+server.port = 8082
+spring.application.name=course-service
+
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=course_eLearning
