--- a/backend_course/pom.xml
+++ b/backend_course/pom.xml
@@ -101,6 +101,14 @@
 					<target>1.8</target>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>11</source>
+					<target>11</target>
+				</configuration>
+			</plugin>
 		</plugins>
 		<finalName>eLearning-course</finalName>
 	</build>
