--- a/backend_course/src/main/resources/application.properties
+++ b/backend_course/src/main/resources/application.properties
@@ -20,3 +20,6 @@ aws.s3.bucket.video=elearning-sead-video
 # upload file size
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+
+# link course user detail
+api.base.url = "http://localhost:8080/"
