professor name + brief introduction + number of course

--- a/backend_course/src/main/resources/application.properties
+++ b/backend_course/src/main/resources/application.properties
@@ -22,4 +22,4 @@ spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
 # link course user detail
-api.base.url = "http://localhost:8080/"
+api.base.url = "http://localhost:8080"
