--- a/backend_course/docker-compose.yml
+++ b/backend_course/docker-compose.yml
@@ -1,14 +1,14 @@
 version: '3.8'
 services:
-  backend_course:
-    build:
-      context: .
-      target: development
-    ports:
-      - "8082:8082"
-    container_name: backend_course
-    depends_on:
-      - mongodb
+#  backend_course:
+#    build:
+#      context: .
+#      target: development
+#    ports:
+#      - "8082:8082"
+#    container_name: backend_course
+#    depends_on:
+#      - mongodb
 
   mongodb:
     image: mongo:latest
