--- a/backend_course/.github/workflows/on_push_course.yml
+++ b/backend_course/.github/workflows/on_push_course.yml
@@ -21,3 +21,11 @@ jobs:
           cache: maven
       - name: Build with Maven
         run: mvn -B package --file pom.xml
+
+      - name: Publish to Docker Hub
+        uses: docker/build-push-action@v1
+        with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_PASSWORD }}
+          repository: maklisa2000/rmit_e_learning
+          tags: latest
