--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -13,14 +13,13 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - name: Set up JDK 11
-        uses: actions/setup-java@v3
+      - name: Setup jdk-17
+        uses: actions/setup-java@v2
         with:
-          java-version: '11'
+          java-version: 17
           distribution: 'temurin'
-          cache: maven
       - name: Build with Maven
-        run: mvn -B package --file backend_course/pom.xml
+        run: mvn -B package -DskipTests=true --file pom.xml
 
       - name: Publish to Docker Hub
         uses: docker/build-push-action@v1
