--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -19,7 +19,7 @@ jobs:
           java-version: 17
           distribution: 'temurin'
       - name: Build with Maven
-        run: mvn -B package -DskipTests=true --file pom.xml
+        run: mvn -B package --file pom.xml -DskipTests=true 
 
       - name: Publish to Docker Hub
         uses: docker/build-push-action@v1
