--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -7,8 +7,7 @@ on:
     branches: [ course-backend ]
 
 jobs:
-  build:
-
+  build-and-deploy-course-backend:
     runs-on: ubuntu-latest
 
     steps:
@@ -21,10 +20,11 @@ jobs:
       - name: Build with Maven
         run: mvn -B package -DskipTests=true --file backend_course/pom.xml
 
-      - name: Publish to Docker Hub
+      - name: Build and push Docker image
         uses: docker/build-push-action@v1
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_PASSWORD }}
           repository: maklisa2000/rmit_e_learning
+          dockerfile: backend_course/Dockerfile
           tags: latest
