--- a/backend_course/Dockerfile
+++ b/backend_course/Dockerfile
@@ -1,3 +1,11 @@
+FROM maven:3.6.3-jdk-8-slim AS build
+COPY src /home/app/src
+COPY pom.xml /home/app
+RUN mvn -B clean package --file /home/app/pom.xml -DskipTests=true
+
 FROM openjdk:17-oracle
-COPY */course_eLearning.jar app.jar
-ENTRYPOINT ["java","-jar", "app.jar"]
+USER spring:spring
+COPY --from=build /home/app/target/*.jar app.jar
+ENTRYPOINT ["java","-jar","/app.jar"]
+#COPY */course_eLearning.jar app.jar
+#ENTRYPOINT ["java","-jar", "app.jar"]
