--- a/backend_course/.github/workflows/on_push_course.yml
+++ b/backend_course/.github/workflows/on_push_course.yml
@@ -27,4 +27,5 @@ jobs:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_PASSWORD }}
           repository: maklisa2000/rmit_e_learning
-          tags: latest
+          tags: course_backend:latest
+
