--- a/backend_user_details/template-sample/Dockerfile
+++ b/backend_user_details/template-sample/Dockerfile
@@ -1,3 +1,9 @@
-FROM openjdk:8-jdk-alpine
-ADD target/eLearning-course.jar app.jar
+FROM maven:3.8.4-openjdk-17 AS build
+COPY backend_course/src /home/app/src
+COPY backend_course/pom.xml /home/app
+RUN mvn -B clean package --file /home/app/pom.xml -DskipTests=true
+
+FROM openjdk:17-oracle
+USER spring:spring
+COPY --from=build /home/app/target/*.jar app.jar
 ENTRYPOINT ["java","-jar","/app.jar"]
