ADD dockerfile user details

--- a/backend_user_details/template-sample/Dockerfile
+++ b/backend_user_details/template-sample/Dockerfile
@@ -1,6 +1,6 @@
 FROM maven:3.8.4-openjdk-17 AS build
-COPY backend_course/src /home/app/src
-COPY backend_course/pom.xml /home/app
+COPY backend_user_details/template-sample/src /home/app/src
+COPY backend_user_details/template-sample/pom.xml /home/app
 RUN mvn -B clean package --file /home/app/pom.xml -DskipTests=true
 
 FROM openjdk:17-oracle
