--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -7,8 +7,7 @@ on:
     branches: [ course-backend ]
 
 jobs:
-  build:
-
+  build-and-deploy-course-backend:
     runs-on: ubuntu-latest
 
     steps:
@@ -18,17 +17,34 @@ jobs:
         with:
           java-version: 17
           distribution: 'temurin'
-      - name: Build with Maven
-        run: mvn -B package -DskipTests=true --file pom.xml
 
-      - name: Publish to Docker Hub
+      - name: Build and push Docker image
         uses: docker/build-push-action@v1
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_PASSWORD }}
           repository: maklisa2000/rmit_e_learning
-          tags: course_backend:latest
+          dockerfile: backend_course/Dockerfile
+          tags: backend_course:latest
 
+  build-and-deploy-user-backend:
+    runs-on: ubuntu-latest
 
+    steps:
+      - uses: actions/checkout@v3
+      - name: Setup jdk-17
+        uses: actions/setup-java@v2
+        with:
+          java-version: 17
+          distribution: 'temurin'
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v1
+        with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_PASSWORD }}
+          repository: maklisa2000/rmit_e_learning
+          dockerfile: backend_user_details/template-sample/Dockerfile
+          tags: backend_user:latest
 
 # https://www.youtube.com/watch?v=JsOoUrII3EY
