--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,9 +23,9 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_PASSWORD }}
-          repository: maklisa2000/rmit_e_learning
+          repository: maklisa2000/rmit_e_learning_course_backend
           dockerfile: backend_course/Dockerfile
-          tags: backend_course:latest
+          tags: latest
 
   build-and-deploy-user-backend:
     runs-on: ubuntu-latest
@@ -43,8 +43,28 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_PASSWORD }}
-          repository: maklisa2000/rmit_e_learning
+          repository: maklisa2000/rmit_e_learning_course_frontend
           dockerfile: backend_user_details/template-sample/Dockerfile
-          tags: backend_user:latest
+          tags: latest
+
+  build-and-deploy-api-gatway:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
+      - name: Setup jdk-17
+        uses: actions/setup-java@v2
+        with:
+          java-version: 17
+          distribution: 'temurin'
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v1
+        with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_PASSWORD }}
+          repository: maklisa2000/rmit_e_learning_course_frontend
+          dockerfile: api-gateway/Dockerfile
+          tags: latest
 
 # https://www.youtube.com/watch?v=JsOoUrII3EY
