--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,6 @@
 version: '3.8'
+x-aws-vpc: "vpc-e26e5687"
 services:
-#  backend_course:
-#    build:
-#      context: .
-#      target: development
-#    ports:
-#      - "8082:8082"
-#    container_name: backend_course
-#    depends_on:
-#      - mongodb
 
   mongodb:
     image: mongo:latest
