ADD ecr course backend

--- a/api-gateaway/Dockerfile
+++ b/api-gateaway/Dockerfile
@@ -1,6 +1,6 @@
 FROM maven:3.8.4-openjdk-17 AS build
-COPY api-gateway/src /home/app/src
-COPY api-gateway/pom.xml /home/app
+COPY api-gateaway/src /home/app/src
+COPY api-gateaway/pom.xml /home/app
 RUN mvn -B clean package --file /home/app/pom.xml -DskipTests=true
 
 FROM openjdk:17-oracle
