--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -1,4 +1,4 @@
-name: ON_PUSH_COURSE_BACKEND
+name: AWS ECR
 
 on:
   push:
@@ -7,7 +7,7 @@ on:
     branches: [ course-backend ]
 
 jobs:
-  build-and-deploy-course-backend:
+  build-and-deploy-user-backend:
     runs-on: ubuntu-latest
 
     steps:
@@ -35,56 +35,37 @@ jobs:
           ECR_REPOSITORY: rmit_e_learning_user_backend
           IMAGE_TAG: latest
         run: |
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -f backend_course/Dockerfile .
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -f backend_user_details/template-sample/Dockerfile .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v1
-        with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_PASSWORD }}
-          repository: maklisa2000/rmit_e_learning_course_backend
-          dockerfile: backend_course/Dockerfile
-          tags: latest
-
-  build-and-deploy-user-backend:
+  build-and-deploy-course-backend:
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v3
+
       - name: Setup jdk-17
         uses: actions/setup-java@v2
         with:
           java-version: 17
           distribution: 'temurin'
-
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v1
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
         with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_PASSWORD }}
-          repository: maklisa2000/rmit_e_learning_user_backend
-          dockerfile: backend_user_details/template-sample/Dockerfile
-          tags: latest
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ap-south-1
 
-  build-and-deploy-api-gatway:
-    runs-on: ubuntu-latest
+      - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v1
 
-    steps:
-      - uses: actions/checkout@v3
-      - name: Setup jdk-17
-        uses: actions/setup-java@v2
-        with:
-          java-version: 17
-          distribution: 'temurin'
-
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v1
-        with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_PASSWORD }}
-          repository: maklisa2000/rmit_e_learning_course_frontend
-          dockerfile: api-gateaway/Dockerfile
-          tags: latest
-
+      - name: Build, tag, and push image to Amazon ECR
+        env:
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          ECR_REPOSITORY: rmit_e_learning_course_backend
+          IMAGE_TAG: latest
+        run: |
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -f backend_course/Dockerfile .
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 # https://www.youtube.com/watch?v=JsOoUrII3EY
