--- a/backend_course/pom.xml
+++ b/backend_course/pom.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>3.0.0</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>course_eLearning</groupId>
 	<artifactId>course_eLearning</artifactId>
@@ -64,7 +65,7 @@
 			<artifactId>aws-java-sdk</artifactId>
 			<version>1.12.373</version>
 		</dependency>
-<!--		unit test only, should be deleted -->
+		<!--		unit test only, should be deleted -->
 		<dependency>
 			<groupId>org.junit.vintage</groupId>
 			<artifactId>junit-vintage-engine</artifactId>
@@ -77,7 +78,7 @@
 			</exclusions>
 		</dependency>
 
-<!--		unit test only, should be deleted -->
+		<!--		unit test only, should be deleted -->
 	</dependencies>
 
 	<build>
@@ -105,8 +106,8 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<source>11</source>
-					<target>11</target>
+					<source>17</source>
+					<target>17</target>
 				</configuration>
 			</plugin>
 		</plugins>
