--- a/backend_course/src/main/resources/application.properties
+++ b/backend_course/src/main/resources/application.properties
@@ -1,12 +1,15 @@
 server.port = 8082
 spring.application.name=course-service
 
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=course_eLearning
-spring.data.mongodb.username=root
-spring.data.mongodb.password=password
-spring.data.mongodb.authentication-database=admin
+#spring.data.mongodb.host=localhost
+#spring.data.mongodb.port=27017
+#spring.data.mongodb.database=course_eLearning
+#spring.data.mongodb.username=root
+#spring.data.mongodb.password=password
+#spring.data.mongodb.authentication-database=admin
+
+spring.data.mongodb.uri=mongodb+srv://localhost:localhost@cluster0.qmezsur.mongodb.net/?retryWrites=true&w=majority
+spring.data.mongodb.database=bezkoder_db
 
 springdoc.api-docs.path=/api-docs
 
