ADD next lesson and lesson completed

--- a/backend_user_details/template-sample/src/main/resources/application.properties
+++ b/backend_user_details/template-sample/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.data.mongodb.uri=mongodb+srv://root:root@khang-mongo.wjhkyca.mongodb.net/
 spring.data.mongodb.database=miki
 spring.application.name=profile-service
 
-#spring.data.mongodb.host=localhost
+#spring.data.mongodb.host=mongodb
 #spring.data.mongodb.port=27017
-#spring.data.mongodb.database=course_eLearning
+#spring.data.mongodb.database=user_eLearning
 #spring.data.mongodb.username=root
 #spring.data.mongodb.password=password
 #spring.data.mongodb.authentication-database=admin
