--- a/backend_course/src/main/resources/application.properties
+++ b/backend_course/src/main/resources/application.properties
@@ -1,17 +1,9 @@
 server.port = 8082
 spring.application.name=course-service
 
-#spring.data.mongodb.host=mongodb_course
-#spring.data.mongodb.port=27018
-#spring.data.mongodb.database=course_eLearning
-#spring.data.mongodb.username=root
-#spring.data.mongodb.password=password
-#spring.data.mongodb.authentication-database=admin
-
-
-spring.data.mongodb.host=localhost
+spring.data.mongodb.host=mongodb
 spring.data.mongodb.port=27017
-spring.data.mongodb.database=course_eLearning
+spring.data.mongodb.database=user_eLearning
 spring.data.mongodb.username=root
 spring.data.mongodb.password=password
 spring.data.mongodb.authentication-database=admin
