--- a/backend_user_details/template-sample/src/main/resources/application.properties
+++ b/backend_user_details/template-sample/src/main/resources/application.properties
@@ -1,13 +1,13 @@
-spring.data.mongodb.uri=mongodb+srv://root:root@khang-mongo.wjhkyca.mongodb.net/?retryWrites=true&w=majority
-spring.data.mongodb.database=miki
-spring.application.name=profile-service
+#spring.data.mongodb.uri=mongodb+srv://root:root@khang-mongo.wjhkyca.mongodb.net/?retryWrites=true&w=majority
+#spring.data.mongodb.database=miki
+#spring.application.name=profile-service
 
-#spring.data.mongodb.host=mongodb
-#spring.data.mongodb.port=27017
-#spring.data.mongodb.database=user_eLearning
-#spring.data.mongodb.username=root
-#spring.data.mongodb.password=password
-#spring.data.mongodb.authentication-database=admin
+spring.data.mongodb.host=mongodb
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=user_eLearning
+spring.data.mongodb.username=root
+spring.data.mongodb.password=password
+spring.data.mongodb.authentication-database=admin
 
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 spring.main.allow-circular-references = true
