--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,8 +18,6 @@ services:
     hostname: zoo1
     ports:
       - "2181:2181"
-    networks:
-      - kong-net
     environment:
       ZOO_MY_ID: 1
       ZOO_PORT: 2181
@@ -33,8 +31,6 @@ services:
     hostname: kafka1
     ports:
       - "9092:9092"
-    networks:
-      - kong-net
     environment:
       KAFKA_ADVERTISED_LISTENERS: LISTENER_DOCKER_INTERNAL://kafka1:19092,LISTENER_DOCKER_EXTERNAL://${DOCKER_HOST_IP:-127.0.0.1}:9092
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: LISTENER_DOCKER_INTERNAL:PLAINTEXT,LISTENER_DOCKER_EXTERNAL:PLAINTEXT
@@ -47,13 +43,15 @@ services:
       - ./zk-single-kafka-single/kafka1/data:/var/lib/kafka/data
     depends_on:
       - zoo1
-      
+
 networks:
   kong-net:
     driver: bridge
 
 volumes:
   mongodb_data_container:
+  cache:
+    driver: local
   # mongodb_course:
   #     image: mongo:latest
   #     environment:
