--- a/backend_user_details/template-sample/pom.xml
+++ b/backend_user_details/template-sample/pom.xml
@@ -125,6 +125,12 @@
 			<version>2.5.5</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.github.javafaker</groupId>
+			<artifactId>javafaker</artifactId>
+			<version>1.0.2</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
