--- a/backend_course/src/main/resources/application.properties
+++ b/backend_course/src/main/resources/application.properties
@@ -1,15 +1,15 @@
 server.port = 8082
 spring.application.name=course-service
 
-spring.data.mongodb.host=mongodb
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=user_eLearning
-spring.data.mongodb.username=root
-spring.data.mongodb.password=password
-spring.data.mongodb.authentication-database=admin
+#spring.data.mongodb.host=localhost
+#spring.data.mongodb.port=27017
+#spring.data.mongodb.database=course_eLearning
+#spring.data.mongodb.username=root
+#spring.data.mongodb.password=password
+#spring.data.mongodb.authentication-database=admin
 
-#spring.data.mongodb.uri=mongodb+srv://localhost:localhost@cluster0.qmezsur.mongodb.net/?retryWrites=true&w=majority
-#spring.data.mongodb.database=bezkoder_db
+spring.data.mongodb.uri=mongodb+srv://localhost:localhost@cluster0.qmezsur.mongodb.net/?retryWrites=true&w=majority
+spring.data.mongodb.database=bezkoder_db
 
 springdoc.api-docs.path=/api-docs
 
@@ -24,9 +24,8 @@ aws.s3.bucket.video=elearning-sead-video
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
-# link course user detail
-api.base.url = "http://localhost:8080"
-
 spring.cache.redis.time-to-live=100S
-spring.cache.type=simple
+spring.cache.type=redis
+spring.redis.host=redis
+spring.redis.port=6379
 
