HAVING PROBLEM with kafka

--- a/backend_user_details/template-sample/src/main/resources/application.properties
+++ b/backend_user_details/template-sample/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 #spring.data.mongodb.database=miki
 #spring.application.name=profile-service
 
-spring.data.mongodb.host=localhost
+spring.data.mongodb.host=mongodb
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=user_eLearning
 spring.data.mongodb.username=root
