--- a/backend_course/src/main/resources/application.properties
+++ b/backend_course/src/main/resources/application.properties
@@ -24,8 +24,8 @@ aws.s3.bucket.video=elearning-sead-video
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
-spring.cache.redis.time-to-live=100S
-spring.cache.type=redis
-spring.redis.host=redis
-spring.redis.port=6379
+#spring.cache.redis.time-to-live=100S
+#spring.cache.type=redis
+#spring.redis.host=redis
+#spring.redis.port=6379
 
