--- a/backend_user_details/template-sample/src/main/resources/application.properties
+++ b/backend_user_details/template-sample/src/main/resources/application.properties
@@ -4,7 +4,7 @@
 
 spring.data.mongodb.host=mongodb
 spring.data.mongodb.port=27017
-spring.data.mongodb.database=user_eLearning
+spring.data.mongodb.database=course_eLearning
 spring.data.mongodb.username=root
 spring.data.mongodb.password=password
 spring.data.mongodb.authentication-database=admin
