--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,8 @@ version: '3.3'
 networks:
   my_network:
     driver: bridge
+  kafka_network:
+    driver: bridge
 
 services:
 
@@ -43,6 +45,7 @@ services:
     container_name: backend-course
     networks:
       - my_network
+      - kafka_network
     depends_on:
       - mongodb
       - redis
@@ -50,7 +53,7 @@ services:
     ports:
       - "8082:8082"
     links:
-      - "kafka1:kafka1"
+      - "kafka:kafka"
     environment:
       - DB_HOST=mongodb
       - DB_PORT=27017
@@ -67,36 +70,39 @@ services:
     ports:
       - "6379:6379"
     
-  zoo1:
-    image: zookeeper:3.4.9
-    hostname: zoo1
-    ports:
-      - "2181:2181"
-    environment:
-      ZOO_MY_ID: 1
-      ZOO_PORT: 2181
-      ZOO_SERVERS: server.1=zoo1:2888:3888
-    volumes:
-      - ./zk-single-kafka-single/zoo1/data:/data
-      - ./zk-single-kafka-single/zoo1/datalog:/datalog
+  zookeeper:
+    image: wurstmeister/zookeeper
+    expose:
+      - "2181"
+    networks:
+      - kafka_network
 
-  kafka1:
-    image: confluentinc/cp-kafka:5.5.3
-    hostname: kafka1
+
+  kafka:
+    image: wurstmeister/kafka
     ports:
       - "9092:9092"
+      - "9093:9093"
+    restart: always
+    container_name: kafka
+    networks:
+      - kafka_network
     environment:
-      KAFKA_ADVERTISED_LISTENERS: LISTENER_DOCKER_INTERNAL://kafka1:19092,LISTENER_DOCKER_EXTERNAL://${DOCKER_HOST_IP:-127.0.0.1}:9092
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: LISTENER_DOCKER_INTERNAL:PLAINTEXT,LISTENER_DOCKER_EXTERNAL:PLAINTEXT
-      KAFKA_INTER_BROKER_LISTENER_NAME: LISTENER_DOCKER_INTERNAL
-      KAFKA_ZOOKEEPER_CONNECT: "zoo1:2181"
-      KAFKA_BROKER_ID: 1
-      KAFKA_LOG4J_LOGGERS: "kafka.controller=INFO,kafka.producer.async.DefaultEventHandler=INFO,state.change.logger=INFO"
-      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-    volumes:
-      - ./zk-single-kafka-single/kafka1/data:/var/lib/kafka/data
+      CONNECT_BOOTSTRAP_SERVERS: 'kafka:9092'
+      CONNECT_ZOOKEEPER_CONNECT: "zookeeper:2181"
+      JVM_OPTS: -Xmx1g -Xms1g -XX:MaxPermSize=1024m
+      KAFKA_ADVERTISED_HOST_NAME: kafka
+      KAFKA_ADVERTISED_PORT: 9092
+      KAFKA_CREATE_TOPICS: comment
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_INTER_BROKER_LISTENER_NAME: INSIDE
+      KAFKA_LISTENERS: INSIDE://kafka:9092,OUTSIDE://kafka:9093
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INSIDE:PLAINTEXT, OUTSIDE:PLAINTEXT
+      KAFKA_ADVERTISED_LISTENERS: INSIDE://kafka:9092,OUTSIDE://kafka:9093
     depends_on:
-      - zoo1
+      - zookeeper
+    volumes:
+      - ./:/etc/kafka
 
 
 
