--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,57 +1,116 @@
 version: '3.3'
-services:
-  mongodb:
-      image: mongo:latest
-      environment:
-        MONGO_INITDB_ROOT_USERNAME: root
-        MONGO_INITDB_ROOT_PASSWORD: password
-        MONGO_INITDB_DATABASE: user_eLearning
-      ports:
-        - "27017:27017"
-      container_name: mongodb
-      networks:
-        - kong-net
-      volumes:
-        - ./database-data:/data/db
-  zoo1:
-    image: zookeeper:3.4.9
-    hostname: zoo1
-    ports:
-      - "2181:2181"
-    environment:
-      ZOO_MY_ID: 1
-      ZOO_PORT: 2181
-      ZOO_SERVERS: server.1=zoo1:2888:3888
-    volumes:
-      - ./zk-single-kafka-single/zoo1/data:/data
-      - ./zk-single-kafka-single/zoo1/datalog:/datalog
+networks:
+  my_network:
+    driver: bridge
+  kafka_network:
+    driver: bridge
 
-  kafka1:
-    image: confluentinc/cp-kafka:5.5.3
-    hostname: kafka1
+services:
+
+  mongodb:
+    image: mongo:latest
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: password
+      MONGO_INITDB_DATABASE: course_eLearning
+    ports:
+      - "27017:27017"
+    container_name: mongodb
+    networks:
+      - my_network
+    volumes:
+      - ./database-data:/data/db
+
+  backend-user:
+    # image: public.ecr.aws/l4i7m7o8/rmit_e_learning_user_backend:latest
+    image: rmit_e_learning_user_backend:latest
+    container_name: backend-user
+    depends_on:
+      - mongodb
+      - redis
+    networks:
+      - my_network
+    ports:
+      - "8081:8081"
+    environment:
+      - DB_HOST=mongodb
+      - DB_PORT=27017
+      - DB_USER=root
+      - DB_PASS=password
+      - DB_NAME=course_eLearning
+
+  backend-course:
+    # image: public.ecr.aws/l4i7m7o8/rmit_e_learning_course_backend:latest
+    image: rmit_e_learning_course_backend:latest
+    container_name: backend-course
+    networks:
+      - my_network
+      - kafka_network
+    depends_on:
+      - mongodb
+      - redis
+      - backend-user
+    ports:
+      - "8082:8082"
+    links:
+      - "kafka:kafka"
+    environment:
+      - DB_HOST=mongodb
+      - DB_PORT=27017
+      - DB_USER=root
+      - DB_PASS=password
+      - DB_NAME=course_eLearning
+
+  redis:
+    container_name: redis
+    image: redis:latest
+    hostname: redis
+    networks:
+      - my_network
+    ports:
+      - "6379:6379"
+    
+  zookeeper:
+    image: wurstmeister/zookeeper
+    expose:
+      - "2181"
+    networks:
+      - kafka_network
+
+
+  kafka:
+    image: wurstmeister/kafka
     ports:
       - "9092:9092"
+      - "9093:9093"
+    restart: always
+    container_name: kafka
+    networks:
+      - kafka_network
     environment:
-      KAFKA_ADVERTISED_LISTENERS: LISTENER_DOCKER_INTERNAL://kafka1:19092,LISTENER_DOCKER_EXTERNAL://${DOCKER_HOST_IP:-127.0.0.1}:9092
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: LISTENER_DOCKER_INTERNAL:PLAINTEXT,LISTENER_DOCKER_EXTERNAL:PLAINTEXT
-      KAFKA_INTER_BROKER_LISTENER_NAME: LISTENER_DOCKER_INTERNAL
-      KAFKA_ZOOKEEPER_CONNECT: "zoo1:2181"
-      KAFKA_BROKER_ID: 1
-      KAFKA_LOG4J_LOGGERS: "kafka.controller=INFO,kafka.producer.async.DefaultEventHandler=INFO,state.change.logger=INFO"
-      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-    volumes:
-      - ./zk-single-kafka-single/kafka1/data:/var/lib/kafka/data
+      CONNECT_BOOTSTRAP_SERVERS: 'kafka:9092'
+      CONNECT_ZOOKEEPER_CONNECT: "zookeeper:2181"
+      JVM_OPTS: -Xmx1g -Xms1g -XX:MaxPermSize=1024m
+      KAFKA_ADVERTISED_HOST_NAME: kafka
+      KAFKA_ADVERTISED_PORT: 9092
+      KAFKA_CREATE_TOPICS: comment
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_INTER_BROKER_LISTENER_NAME: INSIDE
+      KAFKA_LISTENERS: INSIDE://kafka:9092,OUTSIDE://kafka:9093
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INSIDE:PLAINTEXT, OUTSIDE:PLAINTEXT
+      KAFKA_ADVERTISED_LISTENERS: INSIDE://kafka:9092,OUTSIDE://kafka:9093
     depends_on:
-      - zoo1
+      - zookeeper
+    volumes:
+      - ./:/etc/kafka
 
-networks:
-  kong-net:
-    driver: bridge
+
 
 volumes:
   mongodb_data_container:
   cache:
     driver: local
+
   # mongodb_course:
   #     image: mongo:latest
   #     environment:
@@ -66,39 +125,7 @@ volumes:
   #     volumes:
   #       - ./my-database:/data/db
 
-  # backend_user:  
-  #   image: public.ecr.aws/l4i7m7o8/rmit_e_learning_user_backend:latest
-  #   container_name: backend_user
-  #   networks:
-  #     - kong-net
-  #   depends_on:
-  #     - mongodb
-  #   ports:
-  #     - "8081:8081"
-  #   environment:
-  #     - DB_HOST=mongodb
-  #     - DB_PORT=27017
-  #     - DB_USER=root
-  #     - DB_PASS=password
-  #     - DB_NAME=user_eLearning
-
-  # backend_course:  
-  #   # image: public.ecr.aws/l4i7m7o8/rmit_e_learning_course_backend:latest
-  #   image: rmit_e_learning_course_backend:latest
-  #   restart: always
-  #   networks:
-  #     - kong-net
-  #   depends_on:
-  #     - mongodb_course
-  #   ports:
-  #     - "8082:8082"
-  #   container_name: backend_course
-  #   environment:
-  #     - DB_HOST=mongodb_course
-  #     - DB_PORT=27018
-  #     - DB_USER=root
-  #     - DB_PASS=password
-  #     - DB_NAME=course_eLearning
+  # 
   
   # kong:
   #   image: kong:2.2.0
