--- a/backend_course/src/main/resources/application.properties
+++ b/backend_course/src/main/resources/application.properties
@@ -8,8 +8,8 @@ spring.data.mongodb.username=root
 spring.data.mongodb.password=password
 spring.data.mongodb.authentication-database=admin
 
-spring.data.mongodb.uri=mongodb+srv://localhost:localhost@cluster0.qmezsur.mongodb.net/?retryWrites=true&w=majority
-spring.data.mongodb.database=bezkoder_db
+#spring.data.mongodb.uri=mongodb+srv://localhost:localhost@cluster0.qmezsur.mongodb.net/?retryWrites=true&w=majority
+#spring.data.mongodb.database=bezkoder_db
 
 springdoc.api-docs.path=/api-docs
 
@@ -26,6 +26,6 @@ spring.servlet.multipart.max-request-size=10MB
 
 spring.cache.redis.time-to-live=100S
 spring.cache.type=redis
-spring.redis.host=redis
-spring.redis.port=6379
+spring.data.redis.host=redis
+spring.data.redis.port=6379
 
