--- a/backend_course/src/main/resources/application.properties
+++ b/backend_course/src/main/resources/application.properties
@@ -23,6 +23,6 @@ spring.servlet.multipart.max-request-size=10MB
 
 spring.cache.redis.time-to-live=100S
 spring.cache.type=redis
-spring.redis.host=redis
-spring.redis.port=6379
+spring.data.redis.host=redis
+spring.data.redis.port=6379
 
