--- a/backend_user_details/template-sample/src/main/resources/application.properties
+++ b/backend_user_details/template-sample/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 #spring.data.mongodb.database=miki
 #spring.application.name=profile-service
 
-spring.data.mongodb.host=mongodb
+spring.data.mongodb.host=mongodb2
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=course_eLearning
 spring.data.mongodb.username=root
